[gd_scene load_steps=7 format=2]

[ext_resource path="res://GFX/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/PlayerSelection/PlayerPicker.gd" type="Script" id=2]
[ext_resource path="res://GFX/UI/PNG/blue_button07.png" type="Texture" id=3]
[ext_resource path="res://scenes/cart.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/PlayerSelection/player_select_cart.gd" type="Script" id=5]
[ext_resource path="res://scenes/WorldEnvironment.tscn" type="PackedScene" id=6]

[node name="PlayerPicker" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Theme" ]

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
_sections_unfolded = [ "Patch Margin" ]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 212.0
margin_top = 85.0
margin_right = 812.0
margin_bottom = 514.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 24
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 600.0
margin_bottom = 288.0
rect_min_size = Vector2( 600, 288 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="ViewportContainer1" type="ViewportContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 147.0
margin_bottom = 288.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Script", "Size Flags", "Visibility" ]

[node name="Viewport1" type="Viewport" parent="CenterContainer/VBoxContainer/HBoxContainer/ViewportContainer1"]
arvr = false
size = Vector2( 147, 288 )
own_world = false
world = null
transparent_bg = true
msaa = 0
hdr = true
disable_3d = false
keep_3d_linear = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="Cart" parent="CenterContainer/VBoxContainer/HBoxContainer/ViewportContainer1/Viewport1" instance=ExtResource( 4 )]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 5 )
_sections_unfolded = [ "Collision", "Motion", "Script", "Transform" ]
rotation_speed = 1

[node name="Camera1" type="Camera" parent="CenterContainer/VBoxContainer/HBoxContainer/ViewportContainer1/Viewport1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.505975, 1.5 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="WorldEnvironment" parent="CenterContainer/VBoxContainer/HBoxContainer/ViewportContainer1/Viewport1/Camera1" instance=ExtResource( 6 )]

[node name="OmniLight" type="OmniLight" parent="CenterContainer/VBoxContainer/HBoxContainer/ViewportContainer1/Viewport1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.698758, 0.914679, 1.54954 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 3.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
omni_range = 5.0
omni_attenuation = 1.0
omni_shadow_mode = 1
omni_shadow_detail = 1
_sections_unfolded = [ "Light", "Shadow" ]

[node name="ViewportContainer2" type="ViewportContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 151.0
margin_right = 298.0
margin_bottom = 288.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Script", "Size Flags" ]

[node name="Viewport2" type="Viewport" parent="CenterContainer/VBoxContainer/HBoxContainer/ViewportContainer2"]
arvr = false
size = Vector2( 147, 288 )
own_world = false
world = null
transparent_bg = true
msaa = 0
hdr = true
disable_3d = false
keep_3d_linear = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="Cart2" parent="CenterContainer/VBoxContainer/HBoxContainer/ViewportContainer2/Viewport2" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -1.5, 0, 1.5 )
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 5 )
_sections_unfolded = [ "Collision", "Motion", "Script", "Transform" ]
rotation_speed = 1

[node name="Camera2" type="Camera" parent="CenterContainer/VBoxContainer/HBoxContainer/ViewportContainer2/Viewport2"]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 0, 0.505975, 1.5 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="ViewportContainer3" type="ViewportContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 302.0
margin_right = 449.0
margin_bottom = 288.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Script", "Size Flags" ]

[node name="Viewport3" type="Viewport" parent="CenterContainer/VBoxContainer/HBoxContainer/ViewportContainer3"]
arvr = false
size = Vector2( 147, 288 )
own_world = false
world = null
transparent_bg = true
msaa = 0
hdr = true
disable_3d = false
keep_3d_linear = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="Cart3" parent="CenterContainer/VBoxContainer/HBoxContainer/ViewportContainer3/Viewport3" instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 0, 0, 3 )
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 5 )
_sections_unfolded = [ "Collision", "Motion", "Script", "Transform" ]
rotation_speed = 1

[node name="Camera3" type="Camera" parent="CenterContainer/VBoxContainer/HBoxContainer/ViewportContainer3/Viewport3"]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 0, 0.505975, 1.5 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="ViewportContainer4" type="ViewportContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 453.0
margin_right = 600.0
margin_bottom = 288.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Script", "Size Flags" ]

[node name="Viewport4" type="Viewport" parent="CenterContainer/VBoxContainer/HBoxContainer/ViewportContainer4"]
arvr = false
size = Vector2( 147, 288 )
own_world = false
world = null
transparent_bg = true
msaa = 0
hdr = true
disable_3d = false
keep_3d_linear = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="Cart4" parent="CenterContainer/VBoxContainer/HBoxContainer/ViewportContainer4/Viewport4" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, 1.5, 0, 1.5 )
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 5 )
_sections_unfolded = [ "Collision", "Motion", "Script", "Transform" ]
rotation_speed = 1

[node name="Camera4" type="Camera" parent="CenterContainer/VBoxContainer/HBoxContainer/ViewportContainer4/Viewport4"]
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, 0, 0.505975, 1.44868 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 312.0
margin_right = 600.0
margin_bottom = 429.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 205.0
margin_right = 395.0
margin_bottom = 117.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/vseparation = 20
columns = 1
_sections_unfolded = [ "custom_constants" ]

[node name="HSlider" type="HSlider" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 190.0
margin_bottom = 4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 1.0
max_value = 4.0
step = 1.0
page = 0.0
value = 1.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
scrollable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 190.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "text
"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BeginButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 95.0
margin_right = 190.0
margin_bottom = 117.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Begin!"
flat = false
align = 1

[connection signal="value_changed" from="CenterContainer/VBoxContainer/CenterContainer/GridContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/GridContainer/BeginButton" to="." method="_on_BeginButton_pressed"]
